[package]
name = "rs-stop-words-print"
version = "0.1.0"
edition = "2024"

description = "Prints the stop words for the language."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-stop-words-print"
homepage = "https://github.com/takanoriyanagitani/rs-stop-words-print"
documentation = "https://docs.rs/rs-stop-words-print/latest"
keywords = ["stop-words", "wasi"]

exclude = [
  "rs-stop-words-print.wasm",
  "opt.wasm",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.clap]
version = "4"
default-features = false
features = [
    "std",
    "derive",
    "help",
    "usage",
]

[dependencies.stop-words]
version = "0.10"
default-features = false
features = [
    "iso",
]

[dependencies.phf]
version = "0.13"
default-features = false
features = [
    "std",
    "macros",
]
